feat: create a hero section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <main>
+    <header>
+      <div class="wrap header_wrap">
+        <div class="image_container"></div>
+        <div class="titles_container">
+          <h1 class="main-title">Ivan<br>Kirshchin</h1>
+          <p class="sub-title">freelancer, web developer,<br> website creation</p>
+          <div class="btn_container">
+            <a class="btn">Portfolio</a>
+            <a class="btn">Contacts</a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </main>
 </body>
 </html>
