feat: add links on the site

--- a/index.html
+++ b/index.html
@@ -7,20 +7,60 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <main>
-    <header>
-      <div class="wrap header_wrap">
-        <div class="image_container"></div>
-        <div class="titles_container">
-          <h1 class="main-title">Ivan<br>Kirshchin</h1>
-          <p class="sub-title">freelancer, web developer,<br> website creation</p>
-          <div class="btn_container">
-            <a class="btn">Portfolio</a>
-            <a class="btn">Contacts</a>
-          </div>
+  <header>
+    <div class="wrap header_wrap">
+      <div class="image_container"></div>
+      <div class="titles_container">
+        <h1 class="main-title">Ivan<br>Kirshchin</h1>
+        <p class="sub-title">freelancer, web developer,<br> website creation</p>
+        <div class="btn_container">
+          <a href="#portfolio" class="btn">Portfolio</a>
+          <a href="#contacts" class="btn">Contacts</a>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
+  <main>
+    <section>
+      <div class="portfolio">
+        <h2 class="portfolio_title"
+            id="portfolio">Portfolio</h2>
+      </div>
+    </section>
   </main>
+  <footer class="footer_wrap" id="contacts">
+    <!-- <div class="wrap"> -->
+      <h2 class="contacts_title">Contacts</h2>
+      <div class="contacts_container">
+        <div class="link">
+          <div class="svg_container telegram">
+            <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.98155 9.47993L25.1215 0.557926C26.1955 0.169926 27.1335 0.819927 26.7855 2.44393L26.7875 2.44193L22.8475 21.0039C22.5555 22.3199 21.7735 22.6399 20.6795 22.0199L14.6795 17.5979L11.7855 20.3859C11.4655 20.7059 11.1955 20.9759 10.5755 20.9759L11.0015 14.8699L22.1215 4.82393C22.6055 4.39793 22.0135 4.15793 21.3755 4.58193L7.63355 13.2339L1.70955 11.3859C0.423548 10.9779 0.395549 10.0999 1.98155 9.47993Z" fill="white"/>
+              </svg>
+          </div>
+          <p>write to telegram</p>
+        </div>
+
+        <div class="link">
+          <div class="svg_container watsapp">
+            <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.98155 9.47993L25.1215 0.557926C26.1955 0.169926 27.1335 0.819927 26.7855 2.44393L26.7875 2.44193L22.8475 21.0039C22.5555 22.3199 21.7735 22.6399 20.6795 22.0199L14.6795 17.5979L11.7855 20.3859C11.4655 20.7059 11.1955 20.9759 10.5755 20.9759L11.0015 14.8699L22.1215 4.82393C22.6055 4.39793 22.0135 4.15793 21.3755 4.58193L7.63355 13.2339L1.70955 11.3859C0.423548 10.9779 0.395549 10.0999 1.98155 9.47993Z" fill="white"/>
+              </svg>
+          </div>
+          <p>write to telegram</p>
+        </div>
+
+        <div class="link">
+          <div class="svg_container telegram">
+            <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.98155 9.47993L25.1215 0.557926C26.1955 0.169926 27.1335 0.819927 26.7855 2.44393L26.7875 2.44193L22.8475 21.0039C22.5555 22.3199 21.7735 22.6399 20.6795 22.0199L14.6795 17.5979L11.7855 20.3859C11.4655 20.7059 11.1955 20.9759 10.5755 20.9759L11.0015 14.8699L22.1215 4.82393C22.6055 4.39793 22.0135 4.15793 21.3755 4.58193L7.63355 13.2339L1.70955 11.3859C0.423548 10.9779 0.395549 10.0999 1.98155 9.47993Z" fill="white"/>
+              </svg>
+          </div>
+          <p>write to telegram</p>
+        </div>
+
+      </div>
+    <!-- </div> -->
+  </footer>
 </body>
 </html>
