feat: add footer

--- a/index.html
+++ b/index.html
@@ -32,32 +32,42 @@
     <!-- <div class="wrap"> -->
       <h2 class="contacts_title">Contacts</h2>
       <div class="contacts_container">
-        <div class="link">
+        <a class="link">
           <div class="svg_container telegram">
             <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.98155 9.47993L25.1215 0.557926C26.1955 0.169926 27.1335 0.819927 26.7855 2.44393L26.7875 2.44193L22.8475 21.0039C22.5555 22.3199 21.7735 22.6399 20.6795 22.0199L14.6795 17.5979L11.7855 20.3859C11.4655 20.7059 11.1955 20.9759 10.5755 20.9759L11.0015 14.8699L22.1215 4.82393C22.6055 4.39793 22.0135 4.15793 21.3755 4.58193L7.63355 13.2339L1.70955 11.3859C0.423548 10.9779 0.395549 10.0999 1.98155 9.47993Z" fill="white"/>
               </svg>
           </div>
-          <p>write to telegram</p>
-        </div>
+          <p>write to Telegram</p>
+        </a>
 
-        <div class="link">
+        <a class="link">
           <div class="svg_container watsapp">
-            <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.98155 9.47993L25.1215 0.557926C26.1955 0.169926 27.1335 0.819927 26.7855 2.44393L26.7875 2.44193L22.8475 21.0039C22.5555 22.3199 21.7735 22.6399 20.6795 22.0199L14.6795 17.5979L11.7855 20.3859C11.4655 20.7059 11.1955 20.9759 10.5755 20.9759L11.0015 14.8699L22.1215 4.82393C22.6055 4.39793 22.0135 4.15793 21.3755 4.58193L7.63355 13.2339L1.70955 11.3859C0.423548 10.9779 0.395549 10.0999 1.98155 9.47993Z" fill="white"/>
-              </svg>
+            <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M23.4225 16.8432C23.4225 16.8432 20.974 15.6428 19.4409 14.8425C17.7059 13.9482 15.6671 15.6228 14.7077 16.5752C13.2145 16.001 11.8507 15.1344 10.6961 14.0262C9.58869 12.8707 8.72295 11.5055 8.14954 10.0107C9.10101 9.0484 10.77 7.00962 9.88055 5.27301C9.09099 3.73645 7.88176 1.28755 7.88176 1.28558C7.71208 0.948524 7.36738 0.735727 6.99026 0.735352H4.99148C2.08057 1.2386 -0.035894 3.7809 -0.00553695 6.73755C-0.00553695 9.87867 3.75021 15.9129 6.28277 18.4498C8.81534 20.9867 14.8437 24.7441 17.9838 24.7441C20.9376 24.7745 23.4775 22.6559 23.9803 19.7423V17.7416C23.9806 17.3601 23.7643 17.0117 23.4225 16.8432Z" fill="#FAFAFA" />
+            </svg>
           </div>
-          <p>write to telegram</p>
-        </div>
+          <p>send to Whatsapp</p>
+        </a>
 
-        <div class="link">
-          <div class="svg_container telegram">
-            <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M1.98155 9.47993L25.1215 0.557926C26.1955 0.169926 27.1335 0.819927 26.7855 2.44393L26.7875 2.44193L22.8475 21.0039C22.5555 22.3199 21.7735 22.6399 20.6795 22.0199L14.6795 17.5979L11.7855 20.3859C11.4655 20.7059 11.1955 20.9759 10.5755 20.9759L11.0015 14.8699L22.1215 4.82393C22.6055 4.39793 22.0135 4.15793 21.3755 4.58193L7.63355 13.2339L1.70955 11.3859C0.423548 10.9779 0.395549 10.0999 1.98155 9.47993Z" fill="white"/>
-              </svg>
+        <a class="link">
+          <div class="svg_container linkedin">
+            <svg fill="#ffffff" height="25px" width="25px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	        viewBox="0 0 310 310" xml:space="preserve">
+          <g id="XMLID_801_">
+            <path id="XMLID_802_" d="M72.16,99.73H9.927c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5H72.16c2.762,0,5-2.238,5-5V104.73
+              C77.16,101.969,74.922,99.73,72.16,99.73z"/>
+            <path id="XMLID_803_" d="M41.066,0.341C18.422,0.341,0,18.743,0,41.362C0,63.991,18.422,82.4,41.066,82.4
+              c22.626,0,41.033-18.41,41.033-41.038C82.1,18.743,63.692,0.341,41.066,0.341z"/>
+            <path id="XMLID_804_" d="M230.454,94.761c-24.995,0-43.472,10.745-54.679,22.954V104.73c0-2.761-2.238-5-5-5h-59.599
+              c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5h62.097c2.762,0,5-2.238,5-5v-98.918c0-33.333,9.054-46.319,32.29-46.319
+              c25.306,0,27.317,20.818,27.317,48.034v97.204c0,2.762,2.238,5,5,5H305c2.762,0,5-2.238,5-5V194.995
+              C310,145.43,300.549,94.761,230.454,94.761z"/>
+          </g>
+</svg>
           </div>
-          <p>write to telegram</p>
-        </div>
+          <p>contact me on LinkedIn</p>
+        </a>
 
       </div>
     <!-- </div> -->
