--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
+  <meta property="og:title" content="portfolio">
+  <meta property="og:site_name" content="portfolio">
+  <meta property="og:url" content="https://vanoki.github.io/new_portfolio/">
+  <meta property="og:description" content="freelance web developer portfolio">
+  <meta property="og:image" content="">
+  <meta property="og:image:width" content="968"/>
+  <meta property="og:image:height" content="504"/>
 </head>
 <body>
   <header>
