--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:site_name" content="portfolio">
   <meta property="og:url" content="https://vanoki.github.io/new_portfolio/">
   <meta property="og:description" content="freelance web developer portfolio">
-  <meta property="og:image" content="">
+  <meta property="og:image" content="https://vanoki.github.io/new_portfolio/assets/preview/preview.png">
   <meta property="og:image:width" content="968"/>
   <meta property="og:image:height" content="504"/>
 </head>
