--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
       <div class="portfolio">
         <h2 class="portfolio_title"
             id="portfolio">Portfolio</h2>
+
         <div class="item">
-          <img class="portfolio_img" src="assets/Caffee_preview.png" alt="Caffee_preview">
+          <img class="portfolio_img" src="assets/preview/coffee-prevj.jpg" alt="Caffee_preview">
           <h3><a href="https://vanoki.github.io/Coffee-house/">Coffee House Landing page</a></h3>
         </div>
+
+        <div class="item">
+          <img class="portfolio_img" src="assets/preview/cozy-prev3.jpg" alt="Shelter_preview">
+          <h3><a href="https://vanoki.github.io/Coffee-house/">Cozy pets shelter</a></h3>
+        </div>
+
       </div>
     </section>
   </main>
