fix: delete unnecessary files

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             id="portfolio">Portfolio</h2>
 
         <div class="item">
-          <img class="portfolio_img" src="assets/preview/coffee-prevj.jpg" alt="Caffee_preview">
+          <img class="portfolio_img" src="assets/preview/coffee-prev2.jpg" alt="Caffee_preview">
           <h3><a href="https://vanoki.github.io/Coffee-house/">Coffee House Landing page</a></h3>
         </div>
 
         <div class="item">
           <img class="portfolio_img" src="assets/preview/cozy-prev3.jpg" alt="Shelter_preview">
-          <h3><a href="https://vanoki.github.io/Coffee-house/">Cozy pets shelter</a></h3>
+          <h3><a href="https://vanoki.github.io/Cozy-house/shelter/pages/main/index.html">Cozy pets shelter</a></h3>
         </div>
 
       </div>
