--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
           <h3><a href="https://vanoki.github.io/Cozy-house/shelter/pages/main/index.html">Cozy pets shelter</a></h3>
         </div>
 
+        <div class="item">
+          <img class="portfolio_img" src="assets/preview/burger3.jpg" alt="Burger_preview">
+          <h3><a href="https://vanoki.github.io/burgers-intensive/">Burger House</a></h3>
+        </div>
+
       </div>
     </section>
   </main>
