feat: add media to the header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="media.css">
   <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
   <meta property="og:title" content="Ivan Kirshchin">
   <meta property="og:site_name" content="portfolio">
@@ -19,7 +20,7 @@
     <div class="wrap header_wrap">
       <div class="image_container"></div>
       <div class="titles_container">
-        <h1 class="main-title">Ivan<br>Kirshchin</h1>
+        <h1 class="main-title">Ivan&nbsp;<br>Kirshchin</h1>
         <p class="sub-title">freelancer, web developer,<br> website creation</p>
         <div class="btn_container">
           <a href="#portfolio" class="btn">Portfolio</a>
