fix: correct subtitle in hero section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="image_container"></div>
       <div class="titles_container">
         <h1 class="main-title">Ivan&nbsp;<br>Kirshchin</h1>
-        <p class="sub-title">freelancer, web developer,<br> website creation</p>
+        <p class="sub-title">freelancer, web developer</p>
         <div class="btn_container">
           <a href="#portfolio" class="btn">Portfolio</a>
           <a href="#contacts" class="btn">Contacts</a>
