fix: correct image for media 600px

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="wrap header_wrap">
       <div class="image_container"></div>
       <div class="titles_container">
-        <h1 class="main-title">Ivan&nbsp;<br>Kirshchin</h1>
-        <p class="sub-title">freelancer, web developer</p>
+        <h1 class="main-title">Ivan&nbsp;Kirshchin</h1>
+        <p class="sub-title">Freelancer, Web Developer</p>
         <div class="btn_container">
           <a href="#portfolio" class="btn">Portfolio</a>
           <a href="#contacts" class="btn">Contacts</a>
