--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         <h2 class="portfolio_title"
             id="portfolio">Portfolio</h2>
 
-        <div class="item">
+        <div class="container">
+          
+        </div>
+
+        <!-- <div class="item">
           <img class="portfolio_img" src="assets/preview/coffee-prev2.jpg" alt="Caffee_preview">
           <h3><a href="https://vanoki.github.io/Coffee-house/">Coffee House Landing page</a></h3>
         </div>
@@ -48,7 +52,7 @@
         <div class="item">
           <img class="portfolio_img" src="assets/preview/burger3.jpg" alt="Burger_preview">
           <h3><a href="https://vanoki.github.io/burgers-intensive/">Burger House</a></h3>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -105,5 +109,6 @@
       </div>
     <!-- </div> -->
   </footer>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
