--- a/index.html
+++ b/index.html
@@ -36,23 +36,9 @@
             id="portfolio">Portfolio</h2>
 
         <div class="container">
-          
         </div>
 
-        <!-- <div class="item">
-          <img class="portfolio_img" src="assets/preview/coffee-prev2.jpg" alt="Caffee_preview">
-          <h3><a href="https://vanoki.github.io/Coffee-house/">Coffee House Landing page</a></h3>
-        </div>
-
-        <div class="item">
-          <img class="portfolio_img" src="assets/preview/cozy-prev3.jpg" alt="Shelter_preview">
-          <h3><a href="https://vanoki.github.io/Cozy-house/shelter/pages/main/index.html">Cozy pets shelter</a></h3>
-        </div>
-
-        <div class="item">
-          <img class="portfolio_img" src="assets/preview/burger3.jpg" alt="Burger_preview">
-          <h3><a href="https://vanoki.github.io/burgers-intensive/">Burger House</a></h3>
-        </div> -->
+        <a class="btn_more"><h3>More</h3></a>
 
       </div>
     </section>
