feat: add first mark-up to the data.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2 class="pop-up__site-name">site-name</h2>
     <p class="pop-up__description">description</p>
     <a class="pop-up__url" href="url">title</a>
-    <img class="pop-up__img" src="" alt="">
+    <img class="pop-up__img" src="assets/mark-ups/[D] Home.png" alt="">
     <div class="back">back to main</div>
   </div>
 
