feat: add container to the pop-up

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <h2 class="pop-up__site-name">site-name</h2>
     <p class="pop-up__description">description</p>
     <a class="pop-up__url" href="url">title</a>
-    <img class="pop-up__img" src="assets/mark-ups/[D] Home.png" alt="">
+    <div class="pop-up__image-container">
+      <img class="pop-up__img" src="assets/mark-ups/[D] Home.png" alt="">
+    </div>
     <div class="back">back to main</div>
   </div>
 
