feat: add pop-up

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-  <div class="pop-up">
+  <!-- <div class="pop-up">
     <h2 class="pop-up__site-name">site-name</h2>
     <p class="pop-up__description">description</p>
     <a class="pop-up__url" href="url">title</a>
@@ -25,7 +25,7 @@
       <img class="pop-up__img" src="assets/mark-ups/[D] Home.png" alt="">
     </div>
     <div class="back">back to main</div>
-  </div>
+  </div> -->
 
   <header>
     <div class="wrap header_wrap">
