--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
         </div>
 
-        <a class="btn_more"><h3>More</h3></a>
+        <a class="btn_more"><h3>Show More</h3></a>
 
       </div>
     </section>
